[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/bg5.jpg" type="Texture" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start Game"

[node name="LevelButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 44.0
text = "Choose Level"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 500.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 381, 218 )
scale = Vector2( 0.6, 0.44 )
texture = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelButton" to="." method="_on_LevelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
